--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,25 @@
 <body>
 <div id="root">
     <header></header>
+    <aside></aside>
     <main></main>
-    <footer></footer>
+
+    <footer>
+        <div class="footer">
+            <div class="`footer_content">
+                <h3 class="footer_title">Subscribe</h3>
+            </div>
+            <div class="footer_content">
+                <h3 class="footer_title">Kiev , Ukraine</h3>
+            </div>
+            <div class="footer_content">
+                <h3 class="footer_title">Kiev , Ukraine</h3>
+            </div>
+            <div class="footer_content">
+                <h3 class="footer_title">Kiev , Ukraine</h3>
+            </div>
+        </div>
+    </footer>
 </div>
 
 <script src="main.js"></script>
