Add Gothic font add rotated text Fix styles

--- a/src/index.html
+++ b/src/index.html
@@ -6,22 +6,26 @@
 <body>
 <div id="root">
     <header></header>
-    <aside></aside>
+    <aside>
+        <div class="content_rotate">
+            <pre><p class="asside__text">C l o t h e s  m a n u f a c t u r e</p>/pre>
+        </div>
+    </aside>
     <main></main>
 
     <footer>
         <div class="footer">
-            <div class="`footer_content">
-                <h3 class="footer_title">Subscribe</h3>
+            <div class="footer__content">
+                <p class="footer__title">Subscribe</p>
             </div>
-            <div class="footer_content">
-                <h3 class="footer_title">Kiev , Ukraine</h3>
+            <div class="footer__content">
+                <p class="footer__title">Kiev , Ukraine</p>
             </div>
-            <div class="footer_content">
-                <h3 class="footer_title">Kiev , Ukraine</h3>
+            <div class="footer__content">
+                <p class="footer__title">For Dropshiping</p>
             </div>
-            <div class="footer_content">
-                <h3 class="footer_title">Kiev , Ukraine</h3>
+            <div class="footer__content">
+                <p class="footer__title">LOGO</p>
             </div>
         </div>
     </footer>
