--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <header></header>
     <aside>
         <div class="content_rotate">
-            <pre><p class="asside__text">C l o t h e s  m a n u f a c t u r e</p>/pre>
+            <pre><p class="asside__text">C l o t h e s  m a n u f a c t u r e</p></pre>
         </div>
     </aside>
     <main></main>
@@ -17,15 +17,32 @@
         <div class="footer">
             <div class="footer__content">
                 <p class="footer__title">Subscribe</p>
+                <input class="footer__input" type="email" placeholder="Enter your email">
+                <button class="footer__button">Subscribe</button>
+                <div class="footer__text">Be the first to find out about exclusive deals, the latest Lookbooks, and top trends.</div>
             </div>
             <div class="footer__content">
                 <p class="footer__title">Kiev , Ukraine</p>
+                <div class="footer__contacts">
+                    <label class="footer__label">+380937142000</label>
+                    <label class="footer__label">+380677142000</label>
+                    <label class="footer__label">info.printed.one@gmail.com</label>
+                </div>
+                <div class="social-links">
+                    o o o o o
+                </div>
+                <p>Shop on map</p>
             </div>
             <div class="footer__content">
                 <p class="footer__title">For Dropshiping</p>
+                <input class="footer__input" type="email" placeholder="Enter your email">
+                <input class="footer__input" placeholder="Enter your phone">
+                <input class="footer__input" placeholder="Enter your Name">
+                <button class="footer__button">Send</button>
             </div>
             <div class="footer__content">
                 <p class="footer__title">LOGO</p>
+                <p class="footer__title">© Copyright 2018 Prime Manufacturing</p>
             </div>
         </div>
     </footer>
