Add labels and variables

--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,12 @@
             </div>
             <div class="footer__content">
                 <p class="footer__title">For Dropshiping</p>
-                <input class="footer__input" type="email" placeholder="Enter your email">
-                <input class="footer__input" placeholder="Enter your phone">
-                <input class="footer__input" placeholder="Enter your Name">
+                <div class="footer__form">
+                    <input class="footer__input" type="email" placeholder="Enter your email">
+                    <input class="footer__input" placeholder="Enter your phone">
+                    <input class="footer__input" placeholder="Enter your Name">
+                </div>
+
                 <button class="footer__button">Send</button>
             </div>
             <div class="footer__content">
