Try add slide down gif

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,14 @@
     <header></header>
     <aside>
         <div class="content_rotate">
-            <pre><p class="asside__text">C l o t h e s  m a n u f a c t u r e</p></pre>
+            <pre><p class="asside__text">C  l  o  t  h  e  s   m  a  n  u  f  a  c  t  u  r  e</p></pre>
         </div>
     </aside>
-    <main></main>
-
+    <main>
+        <div class="main__slide-down">
+            <img src="./assets/slide-down.gif" alt="">
+        </div>
+    </main>
     <footer>
         <div class="footer">
             <div class="footer__content">
@@ -29,7 +32,7 @@
                     <label class="footer__label">info.printed.one@gmail.com</label>
                 </div>
                 <div class="social-links">
-                    o o o o o
+                    <img src="./assets/social/instagram.png" alt="">
                 </div>
                 <p>Shop on map</p>
             </div>
@@ -45,7 +48,7 @@
             </div>
             <div class="footer__content">
                 <p class="footer__title">LOGO</p>
-                <p class="footer__title">© Copyright 2018 Prime Manufacturing</p>
+                <p class="footer__text_copyright">© Copyright 2018 Prime Manufacturing</p>
             </div>
         </div>
     </footer>
