Fix slider styles

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
             <div class="main__slide">
                 <div style="height: 100%">
                     <h1>Test</h1>
+
                 </div>
             </div>
             <div class="main__slide">123</div>
@@ -78,7 +79,9 @@
             slidesToScroll: 1,
             autoplay: true,
             autoplaySpeed: 4000,
-
+            dots: true,
+            adaptiveHeight:true,
+            arrows:false
         });
     });
 </script>
