--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,24 @@
     </aside>
     <main>
         <div class="main__slider">
-            <div class="main__slide">
+            <div id="slide_1" class="main__slide">
                 <div class="main__content">
-                    <h1>High-quality fast runs</h1>
-                    <p>A young and creative team, deeply in love with their work – that is the main secret of our quality service.
-                        We never ask our clients to judge us on our successes; we ask them to judge us on our failures because there are so few.</p>
+                    <p><b>Printed</b> - жемчужина цифровой печати в Украине!</p>
+                    <p>Высококачественные технологии, чернила на водостойкой основе и 100% гарантия качества - абсолютно все в разницу и опт!</p>
                 </div>
             </div>
-            <div class="main__slide">
+            <div id="slide_2" class="main__slide">
                 <div class="main__content">
-                    <h1>Slide2</h1>
-                    <p>A young and creative team, deeply in love with their work – that is the main secret of our quality service.
-                        We never ask our clients to judge us on our successes; we ask them to judge us on our failures because there are so few.</p>
+                    <h1>Пошив</h1>
+                    <p>У нас собственное крупное производство, а
+                        также уникальный выбор высококачественных как нишевых тканей, для реализации эксклюзивных изделий,
+                        которые мы предоставляем в большом ассортименте, так и любых других, для одежды и спецодежды.
+                        Предмет нашей особой гордости - эксклюзивные натуральные хлопковые ткани, аналогов которым по качествунет нет на современном
+                        текстильном рынке, ни среди премиальных марок. Такая ткань невероятно мягкая и приятная на теле.
+                        Не теряет формы и цвета, позволяет коже дышать, дарит необходимую прохладу летом и согревает зимой.
+                        Мягкие ткани из нашей коллекции идеально походят для футболок, летних платьев, плотные - для свитшотов
+                        и других элементов гардероба на ваш выбор.
+                    </p>
                 </div>
             </div>
         </div>
