added 3,4,5 slides 4 slide is not completed

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header>LOGO</header>
     <aside>
         <div class="content_rotate">
-            <pre><p class="asside__text">C  l  o  t  h  e  s   m  a  n  u  f  a  c  t  u  r  e</p></pre>
+            <p class="asside__text">Clothes manufacture</p>
         </div>
     </aside>
     <main>
@@ -25,15 +25,130 @@
             <div id="slide_2" class="main__slide">
                 <div class="main__content">
                     <h1>Пошив</h1>
-                    <p>У нас собственное крупное производство, а
-                        также уникальный выбор высококачественных как нишевых тканей, для реализации эксклюзивных изделий,
-                        которые мы предоставляем в большом ассортименте, так и любых других, для одежды и спецодежды.
-                        Предмет нашей особой гордости - эксклюзивные натуральные хлопковые ткани, аналогов которым по качествунет нет на современном
-                        текстильном рынке, ни среди премиальных марок. Такая ткань невероятно мягкая и приятная на теле.
-                        Не теряет формы и цвета, позволяет коже дышать, дарит необходимую прохладу летом и согревает зимой.
-                        Мягкие ткани из нашей коллекции идеально походят для футболок, летних платьев, плотные - для свитшотов
+                    <p>У нас собственное крупное производство, а также уникальный выбор высококачественных как нишевых
+                        тканей, для реализации эксклюзивных изделий, которые мы предоставляем в большом ассортименте,
+                        так и любых других, для одежды и спецодежды. Предмет нашей особой гордости - эксклюзивные
+                        натуральные хлопковые ткани, аналогов которым по качествунет нет на современном текстильном
+                        рынке, ни среди премиальных марок. Такая ткань невероятно мягкая и приятная на теле. Не теряет
+                        формы и цвета, позволяет коже дышать, дарит необходимую прохладу летом и согревает зимой.
+                        Мягкие ткани из нашей коллекции идеально походят для футболок, летних платьев, плотные -
+                        для свитшотов
                         и других элементов гардероба на ваш выбор.
                     </p>
+                </div>
+            </div >
+            <div id="slide_3" class="main__slide">
+                <div class="main__content">
+                    <div class="row">
+                        <h2>Сотрудничество</h2>
+                    </div>
+                    <div class="row">
+                        <div class="slide-header__short-line"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <p>Мы оказываем комплексные услуги пошива больших/малых тиражей любой сложности, подбираем
+                                желанную ткань, изучаем предментые нужды клиента. Утвердив выбор и направление мы
+                                разрабатываем эскиз, который служит основой для Вашего персонального лекала. После пробного
+                                образца, обсуждения и утверждения клиентом - мы запускаем основные тиражи в рабочий цикл.
+                            </p>
+                            <p>
+                                Разнообразие и неординарность лекал всевозможной стилистики обеспечивают максимально
+                                продуктивное выполнение базовых заказов. По требованию мы можем модернизировать существующие
+                                лекала в Ваши персональные.
+                            </p>
+                            <p>
+                                Сотрудничество с нами осуществляется согласно требований, которые представлены в
+                            </p>
+                        </div>
+                        <div class="col-6">
+                            <img src="./assets/pages/slide_3.png" />
+                            <div class="slider__navigator">
+                                <a href="#" data-slide="3" class="slider__link slider__link--active">Сотрудничество</a>
+                                <a href="#" data-slide="4" class="slider__link">Требования к макету</a>
+                                <a href="#" data-slide="5" class="slider__link">Пошив</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="slide_4" class="main__slide" >
+                <div class="main__content">
+                    <div class="row">
+                        <h2>Требования к макету</h2>
+                    </div>
+                    <div class="row">
+                        <div class="slide-header__short-line"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <p>
+                                Размер изображение в файле должен соответсвовать размеру печатного изображения 1:1
+                            </p>
+                            <p>
+                                Цветопередача которая представлена на экране телефона/компьютера, бумажном рисунке может
+                                не соответсвовать результату, потому что предварительно, при необходимости получить
+                                желанный цвет - мы проводим цветопробу.
+                            </p>
+                            <p>
+                                Макет установленого формата, эскиз самого изделия (с обязательно указаным требования для
+                                печати и расстояние от верхней части изделия (горла)).
+                            </p>
+                            <p>
+                                Название файла осуществляется по след. Шаблону: (Название принта)+(Размер принта)+(Расстояние
+                                от горла)+(Кол-во слоев печати)
+                            </p>
+                            <br/>
+                            <br/>
+                            <p>Пример:</p>
+                            <p><b>Printedlogo1_30x30_10cm_2</b></p>
+                            <br/>
+                            <br/>
+                            <p>Образец эскиза высылаем по запросу</p>
+                        </div>
+                        <div class="col-6">
+                            <img src="./assets/pages/slide_3.png" />
+                            <div class="slider__navigator">
+                                <a href="#" data-slide="3" class="slider__link">Сотрудничество</a>
+                                <a href="#" data-slide="4" class="slider__link slider__link--active">Требования к макету</a>
+                                <a href="#" data-slide="5" class="slider__link">Пошив</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="slide_5" class="main__slide" >
+                <div class="main__content">
+                    <div class="row">
+                        <h2>Пошив</h2>
+                    </div>
+                    <div class="row">
+                        <div class="slide-header__short-line"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <p>
+                                У нас собственное крупное швейное производство, а также уникальный выбор высококачественных
+                                как нишевых тканей, для реализаци эксклюзивных изделий, которые мы представляем в большом
+                                ассортименте, так и в любых других, для одежды и спецодежды
+                            </p>
+                            <p>
+                                Предмет нашей особой гордости - эксклюзивные натуральные хлопоквые ткани, аналогов которым
+                                по качеству нет ни на современном текстильном рынке, ни среди премиальных марок. Такая ткань
+                                невероятно мягкая и приятная на теле, не теряет формы и цвета, позволяет коже дышать, дарит
+                                необходимую прохладу летом и согревает зимой. Легкие ткани из нашей коллекции идеально подходят
+                                для футболок, летних платьев, плотные - для свитшотов и других элементов гардероба на ваш выбор.
+                            </p>
+                        </div>
+                        <div class="col-6">
+                            <img src="./assets/pages/slide_5.png" />
+                            <div class="slider__navigator">
+                                <a href="#" data-slide="3" class="slider__link">Сотрудничество</a>
+                                <a href="#" data-slide="4" class="slider__link">Требования к макету</a>
+                                <a href="#" data-slide="5" class="slider__link slider__link--active">Пошив</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
