--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,24 @@
             </div>
             <div id="slide_2" class="main__slide">
                 <div class="main__content">
-                    <h1>Пошив</h1>
-                    <p>У нас собственное крупное производство, а также уникальный выбор высококачественных как нишевых
-                        тканей, для реализации эксклюзивных изделий, которые мы предоставляем в большом ассортименте,
-                        так и любых других, для одежды и спецодежды. Предмет нашей особой гордости - эксклюзивные
-                        натуральные хлопковые ткани, аналогов которым по качествунет нет на современном текстильном
-                        рынке, ни среди премиальных марок. Такая ткань невероятно мягкая и приятная на теле. Не теряет
-                        формы и цвета, позволяет коже дышать, дарит необходимую прохладу летом и согревает зимой.
-                        Мягкие ткани из нашей коллекции идеально походят для футболок, летних платьев, плотные -
-                        для свитшотов
-                        и других элементов гардероба на ваш выбор.
-                    </p>
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="./assets/pages/slide_2.png" />
+                        </div>
+                        <div class="col-6">
+                            <h2>МЫ ПЕЧАТАЕМ НАСТРОЕНИЕ</h2>
+                            <p>Мы оказываем комплексные услуги пошива больших/малых тиражей любой сложности, подбираем
+                                желанную ткань, изучаем предментые нужды клиента. Утвердив выбор и направление мы
+                                разрабатываем эскиз, который служит основой для Вашего персонального лекала. После пробного
+                                образца, обсуждения и утверждения клиентом - мы запускаем основные тиражи в рабочий цикл.
+                            </p>
+                            <div class="slide_2__additional-info">
+                                <h4>НАШИ ПРЕИМУЩЕСТВА</h4>
+                                <p>Современное оборудование квалифицированык и креативные эксперты которые всегда готовы ответить на ваши вопросы  и предложить решения.</p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div >
             <div id="slide_3" class="main__slide">
@@ -152,7 +159,7 @@
                 </div>
             </div>
         </div>
-        <div class="main__slide-down"></div>
+<!--        <div class="main__slide-down"></div>-->
     </main>
     <footer>
         <div class="footer">
