--- a/src/index.html
+++ b/src/index.html
@@ -81,14 +81,15 @@
             </div>
             <div id="slide_4" class="main__slide" >
                 <div class="main__content">
-                    <div class="row">
-                        <h2>Требования к макету</h2>
-                    </div>
-                    <div class="row">
-                        <div class="slide-header__short-line"></div>
-                    </div>
+
                     <div class="row">
                         <div class="col-6">
+                            <div class="row">
+                                <h2>Требования к макету</h2>
+                            </div>
+                            <div class="row">
+                                <div class="slide-header__short-line"></div>
+                            </div>
                             <p>
                                 Размер изображение в файле должен соответсвовать размеру печатного изображения 1:1
                             </p>
@@ -114,11 +115,31 @@
                             <p>Образец эскиза высылаем по запросу</p>
                         </div>
                         <div class="col-6">
-                            <img src="./assets/pages/slide_3.png" />
+                            <div class="slide4__description-box">
+                            <svg id="Слой_1" data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 772 797.23"><defs><style>.cls-1{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:10px;}</style></defs><title>Group 16</title><line class="cls-1" x1="703.6" y1="190.62" x2="163.6" y2="190.62"/><path class="cls-1" d="M703.6,636.59v83.19H125.75a41.59,41.59,0,0,1-41.59-41.59h0a41.59,41.59,0,0,1,41.59-41.59h40.5l.09-529.28-40.6.12A41.59,41.59,0,0,0,84.15,149h0"/><line class="cls-1" x1="702.12" y1="673.14" x2="704.13" y2="194.77"/><polyline class="cls-1" points="83.95 680.75 84.34 147.53 84.34 145.34"/></svg>
+                                <div class="slide4__description-text">
+                                    <p>Цифровая печать</p>
+                                    <p>Мин./макс. Размер рисунка для печати - 1х1см/Ваша фантазия </p>
+                                    <p>Формат - JPEG, AI (цветовая палитра CMYK).</p>
+                                    <p>Разрешение не менее 300 dpi (предпочтительное разрешение 720 dpi).</p>
+                                    <p>Фон изображения - прозрачный.</p>
+                                    <br/>
+                                    <br/>
+                                    <p>Векторные форматы - указать размеры рисунка.</p>
+                                    <p>Черный цвет составной (Cyan, Magenta, Yellow, Key):</p>
+                                    <p>C-63%, M-52%, Y-51%, K-100%</p>
+                                    <br/>
+                                    <br/>
+                                    <p>Растровые макеты</p>
+                                    <p>Растровые макеты - формат PSD (цветовая палитра CMYK)</p>
+                                    <p>Разрешение не менее 300 dpi (предпочтительное разрешение 720 dpi).</p>
+                                    <p>Фон изображения - отсутствует.</p>
+                                </div>
+                            </div>
                             <div class="slider__navigator">
-                                <a href="#" data-slide="3" class="slider__link">Сотрудничество</a>
-                                <a href="#" data-slide="4" class="slider__link slider__link--active">Требования к макету</a>
-                                <a href="#" data-slide="5" class="slider__link">Пошив</a>
+                            <a href="#" data-slide="3" class="slider__link">Сотрудничество</a>
+                            <a href="#" data-slide="4" class="slider__link slider__link--active">Требования к макету</a>
+                            <a href="#" data-slide="5" class="slider__link">Пошив</a>
                             </div>
                         </div>
                     </div>
