--- a/src/index.html
+++ b/src/index.html
@@ -254,6 +254,33 @@
                     </div>
                 </div>
             </div>
+            <!--PROJECT-->
+            <div id="slide_7" class="main__slide">
+                <div class="main__content">
+                    <div class="row">
+                        <div class="col-6">
+                            <h2>Resent Projects</h2>
+                            <p>Leperiam bla bla bla</p>
+                            <div class="row">
+                                <img src="./assets/pages/projects/project_1.jpg" />
+                                <img src="./assets/pages/projects/project_2.png" />
+                            </div>
+                            <img src="./assets/pages/projects/project_3.png" />
+
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <img src="./assets/pages/projects/project_4.png" />
+                                <img src="./assets/pages/projects/project_5.png" />
+                            </div>
+                            <div class="col-6">
+                                <img src="./assets/pages/projects/project_6.png" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
 <!--        <div class="main__slide-down"></div>-->
     </main>
