--- a/src/index.html
+++ b/src/index.html
@@ -281,6 +281,13 @@
 
                 </div>
             </div>
+            <!--PRICE-->
+            <div id="slide_8" class="main__slide">
+                <div class="row">
+                    <div class="col-6" style="background-color: #0E0F10"></div>
+                    <div class="col-6" style="background-color: #FFFFFF"></div>
+                </div>
+            </div>
         </div>
 <!--        <div class="main__slide-down"></div>-->
     </main>
