Fix some styles

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
         </div>
     </aside>
     <main>
-        <!--MAIN SLIDE-->
         <div class="main__slider">
+            <!--MAIN SLIDE-->
             <div id="main-slide">
                 <div class="main-slide__content">
                     <p><b>Printed</b> - жемчужина цифровой печати в Украине!</p>
@@ -33,6 +33,7 @@
                     </div>
                     <div class="content__item">
                         <h1 class="about-header">МЫ ПЕЧАТАЕМ НАСТРОЕНИЕ</h1>
+                        <div class="slide-header__short-line"></div>
                         <p>Мы оказываем комплексные услуги пошива больших/малых тиражей любой сложности, подбираем
                             желанную ткань, изучаем предментые нужды клиента. Утвердив выбор и направление мы
                             разрабатываем эскиз, который служит основой для Вашего персонального лекала. После
