--- a/src/index.html
+++ b/src/index.html
@@ -244,29 +244,57 @@
 
             <!--PROJECT-->
             <div id="project-slide">
-                <div class="content">
-                    <div class="content__item">
-                            <h2>Resent Projects</h2>
-                            <p>Leperiam bla bla bla</p>
-                        <div class="content__item">
-                            <img src="./assets/pages/projects/project_1.jpg"/>
-                                <img src="./assets/pages/projects/project_2.png"/>
-                            </div>
-                            <img src="./assets/pages/projects/project_3.png"/>
-
-                    </div>
-                    <div class="content__item">
-                            <div class="content">
-                                <img src="./assets/pages/projects/project_4.png"/>
-                                <img src="./assets/pages/projects/project_5.png"/>
-                            </div>
-                            <div class="content">
-                                <img src="./assets/pages/projects/project_6.png"/>
-                            </div>
-                        </div>
-                    </div>
-
+                <div class="project-slide__centered-cell project-slide__header-block">
+                    <h2>Resent Projects</h2>
+                    <div class="slide-header__short-line"></div>
+                    <p>Leperiam bla bla bla</p>
                 </div>
+                <div class="project-slide__centered-cell">
+                    <img src="./assets/pages/projects/project_4.png"/>
+                </div>
+                <div class="project-slide__centered-cell project-slide__fish-img">
+                    <img src="./assets/pages/projects/project_6.png"/>
+                </div>
+                <div class="project-slide__centered-cell project-slide__paint-img">
+                    <img src="./assets/pages/projects/project_5.png"/>
+                </div>
+                <div class="project-slide__centered-cell">
+                    <img src="./assets/pages/projects/project_1.jpg"/>
+                </div>
+                <div class="project-slide__centered-cell">
+                    <img src="./assets/pages/projects/project_2.png"/>
+                </div>
+                <div class="project-slide__centered-cell project-slide__japan-img">
+                    <img src="./assets/pages/projects/project_3.png"/>
+                </div>
+
+
+                <!--<div class="content">-->
+                <!--<div class="content__item">-->
+                <!--<h2>Resent Projects</h2>-->
+                <!--<div class="slide-header__short-line"></div>-->
+                <!--<p>Leperiam bla bla bla</p>-->
+                <!--<div class="content">-->
+                <!--<img src="./assets/pages/projects/project_1.jpg"/>-->
+                <!--<img src="./assets/pages/projects/project_2.png"/>-->
+                <!--</div>-->
+                <!--<img src="./assets/pages/projects/project_3.png"/>-->
+
+                <!--</div>-->
+                <!--<div class="content__item">-->
+                <!--<div class="content">-->
+                <!--<div class="content__item">-->
+                <!--<img src="./assets/pages/projects/project_4.png"/>-->
+                <!--<img src="./assets/pages/projects/project_5.png"/>-->
+                <!--</div>-->
+                <!--<div class="content">-->
+                <!--</div>-->
+                <!--</div>-->
+                <!--</div>-->
+
+                <!--</div>-->
+
+            </div>
             <!--PRICE-->
             <div id="price-slide">
                 <div class="content">
